--- a/devcontainers/Dockerfile
+++ b/devcontainers/Dockerfile
@@ -1,4 +1,29 @@
 FROM ubuntu:22.04
-COPY dot_files/python_installation.sh /dot_files/python_installation.sh
-COPY dot_files/pyenv_config /dot_files/pyenv_config
-RUN ["bash", "/dot_files/python_installation.sh"]
+ENV DEBIAN_FRONTEND=noninteractive
+ENV PYENV_ROOT="$HOME/.pyenv"
+ENV PATH="$PYENV_ROOT/shims:${PYENV_ROOT}/bin:/root/.local/bin:$PATH"
+ENV PYTHON_VERSION=3.10
+RUN apt-get update \ 
+    && apt-get install -y build-essential --no-install-recommends make \
+        ca-certificates \
+        git \
+        libssl-dev \
+        zlib1g-dev \
+        libbz2-dev \
+        libreadline-dev \
+        libsqlite3-dev \
+        wget \
+        curl \
+        llvm \
+        libncurses5-dev \
+        xz-utils \
+        tk-dev \
+        libxml2-dev \
+        libxmlsec1-dev \
+        libffi-dev \
+        liblzma-dev \
+    && curl https://pyenv.run | bash \
+    && echo "-------------------------> this is correctly installed" \
+    && pyenv install ${PYTHON_VERSION} \
+    && pyenv global ${PYTHON_VERSION} \
+    && curl -sSL https://install.python-poetry.org | python3 -
